--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+	<center>
+	<div class="'row justify-content-start">
+	</div class="col">
+	<div class="card" style="width: 18rem;">
+		<img src="" alt="">
+		<img src="channels4_profile (1).jpg" class="card-img-top" alt="...">
+		<div class="card-body">
+		  <h5 class="card-title">Card title</h5>
+		  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+		  <a href="#" class="btn btn-primary">Go somewhere</a>
+		</div>
+	  </div>
+	<div class="container">
+		<div class="row justify-content-start">
+		  <div class="col-4">
+			<button type="button" class="btn btn-primary">Primary</button>		  </div>
+		  <div class="col-4">
+			<button type="button" class="btn btn-success">Success</button>
+		  </div>
+		  <div class="col-4">
+			<button type="button" class="btn btn-danger">Danger</button>
+		  </div>
+		</div>
+		<center>
+	  </div>
+
+
     <div id="app2">
 
     	เดือนกับปีที่เกิด : {{month + ' / ' + year}} <br>
@@ -25,9 +53,9 @@
 
         	return {
 
-            	month   	: '09',
+            	month   	: '01',
 
-            	year    	: '2549',
+            	year    	: '2550',
 
             	thisYear	: new Date().getFullYear() + 543
 
@@ -48,5 +76,6 @@
 	}).mount('#app2');
 
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
